--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "My personal space on the internet",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
@@ -20,13 +21,15 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/tsconfig": "^0.4.0",
     "@vueuse/head": "^1.1.26",
-    "critters": "^0.0.19",
+    "critters": "^0.0.16",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.15.0",
     "generate-changelog": "^1.8.0",
+    "markdown-it-prism": "^2.3.0",
     "prettier": "^2.8.8",
+    "prismjs": "^1.29.0",
     "sass": "^1.63.4",
     "typescript": "^5.1.3",
     "unplugin-auto-import": "^0.16.4",
@@ -37,7 +40,9 @@
     "vite-ssg": "^0.22.2"
   },
   "dependencies": {
+    "@unhead/vue": "^1.1.27",
     "pinia": "^2.1.4",
+    "vite-plugin-vue-markdown": "^0.23.5",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   }
